--- a/package.xml
+++ b/package.xml
@@ -2,18 +2,17 @@
 <package>
   <name>rgbd_export</name>
   <version>0.0.0</version>
-  <description>The rgbd_export package</description>
+  <description>Synchronised export of RGB-D images and the robot's joint state</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="christian@todo.todo">christian</maintainer>
+  <maintainer email="Christian.Rauch@ed.ac.uk">Christian Rauch</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
