--- a/package.xml
+++ b/package.xml
@@ -40,6 +40,7 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>rosbag</run_depend>
+  <run_depend>tf2_ros</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>opencv2</run_depend>
   <run_depend>cv_bridge</run_depend>
